addons/ingress-nginx-controller/sample-workload/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
spec:
  ingressClassName: nginx-internal
  rules:
  - http:
      paths:
      - backend:
          service:
            name: internal-ingress-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: internal-ingress-svc
spec:
  ports:
  - name: internal-ingress-svc-port
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: internal-nginx
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: internal-nginx
  labels:
    app: internal-nginx
spec:
  containers:
    - image: nginx
      name: internal-nginx
      ports:
      - containerPort: 80
      resources:
        requests:
          memory: 100Mi
          cpu: 100m
        limits:
          memory: 100Mi
          cpu: 100m
      volumeMounts:
        - name: mypage
          mountPath: /usr/share/nginx/html
  volumes:
    - name: mypage
      configMap: 
        name: internal-index
